# AndroidDemos

./: settings.gradle
AIDLNativeClient/: build.gradle
AIDLNativeClient/src/main/: AndroidManifest.xml
AIDLNativeClient/src/main/aidl/com/tmexcept/aidlservice/: AidlInterface.aidl
AIDLNativeClient/src/main/cpp/: CMakeLists.txt  JniAidlConnection.cpp  LogUtil.h
AIDLNativeClient/src/main/cpp/aidl/com/tmexcept/aidlservice/: AidlInterface.cpp
AIDLNativeClient/src/main/cpp/includes/aidl/com/tmexcept/aidlservice/: AidlInterface.h  BnAidlInterface.h  BpAidlInterface.h
AIDLNativeClient/src/main/java/com/tmexcept/: JniAidlLoad.java  Util.kt
AIDLNativeClient/src/main/java/com/tmexcept/ui/: MainActivity.kt
AIDLNativeClient/src/main/res/layout/: activity_main.xml  activity_testcreatetime.xml
AIDLNativeClient/src/main/res/values/: strings.xml
AIDLNativeClient/src/test/java/com/tmexcept/aidlservice/: ExampleUnitTest.kt
AidlClient/: build.gradle
AidlClient/src/androidTest/java/com/example/androiddemos/: ExampleInstrumentedTest.kt
AidlClient/src/main/: AndroidManifest.xml
AidlClient/src/main/aidl/com/tmexcept/aidlservice/: AidlInterface.aidl
AidlClient/src/main/java/com/tmexcept/: MyApp.kt
AidlClient/src/main/java/com/tmexcept/aidlservice/: ClientService.java  ClientService.kt
AidlClient/src/main/java/com/tmexcept/ui/: MainActivity.java  MainActivity.kt  TestCreateTimeActivity.kt
AidlClient/src/main/res/layout/: activity_main.xml
AidlClient/src/main/res/values/: themes.xml
AidlRemote/: build.gradle
AidlRemote/src/main/: AndroidManifest.xml
AidlRemote/src/main/aidl/com/tmexcept/aidlservice/: AidlInterface.aidl
AidlRemote/src/main/java/com/tmexcept/aidlservice/: MainActivity.kt  RemoteService.kt
NativeLearn/: build.gradle
NativeLearn/src/main/: AndroidManifest.xml
NativeLearn/src/main/cpp/: CMakeLists.txt  Register.cpp  nativelib.cpp
NativeLearn/src/main/cpp/inc/: DataBean.h  LogUtil.h  Register.h
NativeLearn/src/main/java/com/tmexcept/nativelib/: DataBean.kt  NativeActivity.kt  NativeLib.kt
NativeLearn/src/main/res/layout/: activity_main.xml
NativeLearn/src/main/res/values/: strings.xml
aidlremote/: build.gradle
aidlremote/src/androidTest/java/com/tmexcept/aidlservice/: ExampleInstrumentedTest.kt
aidlremote/src/main/: AndroidManifest.xml
aidlremote/src/main/aidl/com/tmexcept/aidlservice/: AidlInterface.aidl
aidlremote/src/main/java/com/tmexcept/aidlservice/: MainActivity.java  (+1 more)
aidlremote/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/res/layout/: fragment_first.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
docs/android/: Binder原理.md
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
